// ***********************
//  Euskalbar - CHANGELOG
// ***********************

3.11 bertsioa
================
- Euskalterm berria integratu da. (#121)
- Energia Hiztegia desaktibatu da. (#135)

3.10 bertsioa
================
- Danobat hiztegia integratu da. (#127)
- Hiztegiak eskutatu eta erakusteko aukera hobespenetara eraman da. (#128)
- 3000 eta Adorez desaktibatu dira, ez baitute funtzionatzen.

3.9 bertsioa
================
- Firefox 4 bertsioan funtziona dezan egokitu da Euskalbar. (#103)
- Mokoroaren helbidea aldatu dute -> konpondu dira botoi bidezko bilaketa eta bilaketa konbinatua. (#107)
- Hasierako leihoa erakusten duen kodea aldatu da. (#108)
- Euskalbarren botoia nabigazio-barrara eraman da, hiztegien barran leku gehiago edukitzeko.
- Euskalbarrentzako ikono berria sortu da, Elementary ikono-multzoan eta Zaldieroa letra-tipoan oinarrituta. 
- Firefox menuaren euskarria gehitu da hiztegien menuarentzako.
- Consumer Corpusaren botoiarekin zegoen arazo bat konpondu da. (#109)
- Azal berri lehenetsia sortu da bilaketa konbinatuetarako.
- Azal pertsonalizatuak sortzeko aukera kendu da. (#111)
- Estatistiken leihoa nabigatzailearen fitxa batean erakusten da. (#113)

3.8 bertsioa
================
- Elhuyarren Zientzia eta Teknologiaren Hiztegi Entziklopedikoa gehitu da. (#102)
- Energia eta Telekomunikazioen hiztegiak gehitu dira.
- Lexikoaren Behatokia eta Consumer Corpusak gehitu dira.
- Hizkuntzei lotutako botoiak ezkutatu/erakutsi egin daitezke.
- Azal berria gehitu da bilaketa konbinatuak egiteko: grisleun (thanks Gotzon Egia).

3.7 bertsioa
================
- Hiztegi Batua bilaketa konbinatuetan erabiltzean zegoen bug-a konpondu da. (#93)
- Zehazki hiztegia integratu da. (#95)
- Testu-kutxaren tamaina alda daiteke. (#62)
- Akats konponketak.

3.6 bertsioa
================
- Orotariko Euskal Hiztegia integratu da. (#90)

3.5 bertsioa
================
- ItzuL posta-zerrendako mezuak Google bilatzailearen bidez kontsultatzen dira. (#85)