@@ -8,6 +8,8 @@ oharra=<p>You are free to use the HTML and CSS of this page.<br>Each dictionary 
 # Combined searches
 #
 euskalbar.comb.error=Couldn't load %S.
+euskalbar.comb.general.error=Couldn't load the dictionary.
+euskalbar.comb.disabled=%S is disabled in the combined queries.
 
 #
 # Menu entries
