@@ -8,6 +8,8 @@ oharra=<p>El HTML y CSS de esta pagina pueden usarse libremente.<br>Cada diccion
 # Combined searches
 #
 euskalbar.comb.error=No se ha podido cargar %S.
+euskalbar.comb.general.error=No se ha podido cargar el diccionario.
+euskalbar.comb.disabled=%S esta desactivado en las consultas combinadas.
 
 #
 # Menu entries
