@@ -9,6 +9,7 @@ oharra=<p>Orri honetako HTMLa eta CSSa nahierara erabil daitezke.<br>Orri honeta
 #
 euskalbar.comb.error=Ezin izan da %S kargatu.
 euskalbar.comb.general.error=Ezin izan da hiztegia kargatu.
+euskalbar.comb.disabled=%S desgaituta dago bilaketa konbinatuetarako.
 
 
 #
