@@ -8,6 +8,8 @@ oharra=<p>Le code HTML et CSS  de cette page peut être réutilisé a volonté.<
 # Combined searches
 #
 euskalbar.comb.error=Erreur lors du chargement de le dictionnaire %S.
+euskalbar.comb.general.error=Couldn't load the dictionary.
+euskalbar.comb.disabled=%S is disabled in the combined queries.
 
 #
 # Menu entries
