@@ -8,6 +8,8 @@ oharra=<p>Orri honetako HTMLa eta CSSa nahierara erabil daitezke.<br>Orri honeta
 # Combined searches
 #
 euskalbar.comb.error=Couldn't load %S.
+euskalbar.comb.general.error=Couldn't load the dictionary.
+euskalbar.comb.disabled=%S is disabled in the combined queries.
 
 #
 # Menu entries
